@@ -1,5 +1,5 @@
 
-- no inheritence checks yet
+- no inheritance checks yet
 
 - wide strings and long long not implemented (though long long could
   use the gcc long long if __GNUC__ is defined)
